--- a/nodejs/src/config/config.json
+++ b/nodejs/src/config/config.json
@@ -2,9 +2,10 @@
   "development": {
     "username": "root",
     "password": null,
-    "database": "database_development",
+    "database": "web_appointment_hospital",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "mysql",
+    "logging": false
   },
   "test": {
     "username": "root",
