--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -10,10 +10,12 @@
   "author": "minh trinh",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.13.0",
     "sequelize": "^6.37.6"
   },
